2008-01-02  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-structure.c, test/test_structure.rb: added #[] and
	#[]=.

	* src/rbgst-structure.c, src/rbgst.[ch], test/test_message.rb,
	test/test_structure.rb: stopped conversion between GstStructure
	and Hash.

	* src/rbgst-structure.c, test/test_structure.rb: added #name=,
	#have_name?.

2008-01-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgstbin.c, src/rbgstclockentry.c: GST_CLOCK() -> RVAL2GST_CLOCK().

2007-11-11  Kouhei Sutou  <kou@cozmixng.org>

	* src/: expanded abbreviated macro name.

	* src/rbgst-plugin.c: supported source.
	* test/test_plugin.rb: added a test for source.

	* src/rbgst-plugin-feature.c: supported plugin_name.
	* test/test_plugin_feature.rb: added a test for plugin_name.

	* src/rbgst-plugin-feature.c: supported loaded?.
	* test/test_plugin_feature.rb: added a test for loaded?.

	* src/rbgst-message.c, src/rbgst-mini-object.c: used RGConvertTable.

	* src/rbgst-plugin-feature.c: supported rank.
	* test/test_plugin_feature.rb: added a test for rank.

	* src/rbgst-element-factory.c: supported details readers.
	* test/test_element_factory.rb: added a test for details readers.

	* src/rbgst-plugin-feature.c: supported load.
	* test/test_plugin_feature.rb: added a test for load.

	* sample/gst-inspect.rb: starting rewrite.

	* src/rbgst-type-find-factory.c: added NULL check.

	* src/rbgst-type-find-factory.c: cleanup.
	* test/test_type_find_factory.rb: added a test for extensions.

	* src/rbgst-index-factory.c: supported find and description.
	* test/test_index_factory.rb: added a test for find and description.

	* src/rbgst-element-factory.c: supported long_name.
	* test/test_element_factory.rb: added a test for long_name.

2007-11-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-message.c: supported parsing message API.
	* test/test_message.rb: added tests for parsing message.

	* src/rbgst-message.c: supported new message API.
	* test/test_message.rb: added tests for new message.
