@@ -1,3 +1,8 @@
+2008-01-03  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rbgst-structure.c, test/test_structure.rb: added #delete and
+	#clear.
+
 2008-01-02  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rbgst-structure.c, test/test_structure.rb: added #[] and
